--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,20 +77,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#1\n",
     "\n",
     "# get just unique characters from texts\n",
-    "uniq_chars_x = ''.join(set(data_x[\"text\"]))\n",
-    "uniq_chars_y = ''.join(set(data_y[\"text\"]))"
+    "# uniq_chars_x = ''.join(set(data_x[\"text\"]))\n",
+    "# uniq_chars_y = ''.join(set(data_y[\"text\"]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,16 +99,21 @@
     "    chars_num = {}\n",
     "    for i in text:\n",
     "        if i not in chars_num.keys():\n",
-    "            chars_num[i] = 1\n",
+    "            chars_num[i] = {}\n",
+    "            chars_num[i][\"num\"] = 1\n",
     "        else:\n",
-    "            chars_num[i] += 1\n",
+    "            chars_num[i][\"num\"] += 1\n",
+    "\n",
+    "    text_len = len(text)\n",
+    "    for i in chars_num.keys():\n",
+    "        chars_num[i][\"prob\"] = chars_num[i][\"num\"] / text_len\n",
     "\n",
     "    return chars_num"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,18 +123,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'t': 453, 'h': 344, 'e': 638, ' ': 1249, 'r': 284, 'p': 91, 'u': 189, 'b': 58, 'l': 192, 'i': 321, 'c': 151, 's': 331, 'o': 427, 'n': 310, 'f': 100, 'd': 205, 'a': 455, 'g': 91, 'w': 132, 'm': 135, 'y': 131, 'k': 21, 'v': 36, 'q': 8, 'j': 2, 'x': 2}\n"
+      "dict_keys(['t', 'h', 'e', ' ', 'r', 'p', 'u', 'b', 'l', 'i', 'c', 's', 'o', 'n', 'f', 'd', 'a', 'g', 'w', 'm', 'y', 'k', 'v', 'q', 'j', 'x'])\n",
+      "dict_keys(['t', 'h', 'e', ' ', 'c', 'i', 'l', 'd', 'r', 'n', 'a', 'm', 'p', 'o', 'f', 's', 'u', 'g', 'b', 'y', 'w', 'v', 'k', 'q', 'j', 'x', 'z'])\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(uniq_num_x.keys())\n",
+    "print(uniq_num_y.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'t': {'num': 436, 'prob': 0.06751316196965004}, 'h': {'num': 337, 'prob': 0.05218333849489006}, 'e': {'num': 659, 'prob': 0.10204397646330134}, ' ': {'num': 1199, 'prob': 0.18566119541653764}, 'c': {'num': 102, 'prob': 0.015794363580055745}, 'i': {'num': 297, 'prob': 0.04598947042427996}, 'l': {'num': 249, 'prob': 0.03855682873954785}, 'd': {'num': 303, 'prob': 0.04691855063487148}, 'r': {'num': 350, 'prob': 0.05419634561783834}, 'n': {'num': 355, 'prob': 0.0549705791266646}, 'a': {'num': 438, 'prob': 0.06782285537318056}, 'm': {'num': 109, 'prob': 0.01687829049241251}, 'p': {'num': 91, 'prob': 0.014091049860637968}, 'o': {'num': 399, 'prob': 0.06178383400433571}, 'f': {'num': 137, 'prob': 0.02121399814183958}, 's': {'num': 291, 'prob': 0.04506039021368845}, 'u': {'num': 159, 'prob': 0.024620625580675133}, 'g': {'num': 141, 'prob': 0.021833384948900587}, 'b': {'num': 96, 'prob': 0.01486528336946423}, 'y': {'num': 83, 'prob': 0.01285227624651595}, 'w': {'num': 117, 'prob': 0.01811706410653453}, 'v': {'num': 30, 'prob': 0.004645401052957572}, 'k': {'num': 52, 'prob': 0.008052028491793125}, 'q': {'num': 6, 'prob': 0.0009290802105915144}, 'j': {'num': 15, 'prob': 0.002322700526478786}, 'x': {'num': 1, 'prob': 0.0001548467017652524}, 'z': {'num': 6, 'prob': 0.0009290802105915144}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(uniq_num_y)"
+   ]
   }
  ],
  "metadata": {
