Added missing keys to each texts

--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -142,20 +142,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the rest of english characters\n",
+    "eng_chars = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+    "\n",
+    "def add_missing_chars(chars, uniq_dict):\n",
+    "    for char in chars:\n",
+    "        if (char not in uniq_dict.keys()):\n",
+    "            uniq_dict[char] = {}\n",
+    "            uniq_dict[char][\"num\"] = 0\n",
+    "            uniq_dict[char][\"prob\"] = 0.0\n",
+    "\n",
+    "add_missing_chars(eng_chars, uniq_num_x)\n",
+    "add_missing_chars(eng_chars, uniq_num_y)\n",
+    "\n",
+    "add_missing_chars(uniq_num_x.keys(), uniq_num_y)\n",
+    "add_missing_chars(uniq_num_y.keys(), uniq_num_x)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'t': {'num': 436, 'prob': 0.06751316196965004}, 'h': {'num': 337, 'prob': 0.05218333849489006}, 'e': {'num': 659, 'prob': 0.10204397646330134}, ' ': {'num': 1199, 'prob': 0.18566119541653764}, 'c': {'num': 102, 'prob': 0.015794363580055745}, 'i': {'num': 297, 'prob': 0.04598947042427996}, 'l': {'num': 249, 'prob': 0.03855682873954785}, 'd': {'num': 303, 'prob': 0.04691855063487148}, 'r': {'num': 350, 'prob': 0.05419634561783834}, 'n': {'num': 355, 'prob': 0.0549705791266646}, 'a': {'num': 438, 'prob': 0.06782285537318056}, 'm': {'num': 109, 'prob': 0.01687829049241251}, 'p': {'num': 91, 'prob': 0.014091049860637968}, 'o': {'num': 399, 'prob': 0.06178383400433571}, 'f': {'num': 137, 'prob': 0.02121399814183958}, 's': {'num': 291, 'prob': 0.04506039021368845}, 'u': {'num': 159, 'prob': 0.024620625580675133}, 'g': {'num': 141, 'prob': 0.021833384948900587}, 'b': {'num': 96, 'prob': 0.01486528336946423}, 'y': {'num': 83, 'prob': 0.01285227624651595}, 'w': {'num': 117, 'prob': 0.01811706410653453}, 'v': {'num': 30, 'prob': 0.004645401052957572}, 'k': {'num': 52, 'prob': 0.008052028491793125}, 'q': {'num': 6, 'prob': 0.0009290802105915144}, 'j': {'num': 15, 'prob': 0.002322700526478786}, 'x': {'num': 1, 'prob': 0.0001548467017652524}, 'z': {'num': 6, 'prob': 0.0009290802105915144}}\n"
+      "{'t': {'num': 453, 'prob': 0.07127123977344242}, 'h': {'num': 344, 'prob': 0.054122089364380115}, 'e': {'num': 638, 'prob': 0.10037759597230964}, ' ': {'num': 1249, 'prob': 0.19650723725613595}, 'r': {'num': 284, 'prob': 0.0446821900566394}, 'p': {'num': 91, 'prob': 0.014317180616740088}, 'u': {'num': 189, 'prob': 0.02973568281938326}, 'b': {'num': 58, 'prob': 0.009125235997482694}, 'l': {'num': 192, 'prob': 0.030207677784770296}, 'i': {'num': 321, 'prob': 0.05050346129641284}, 'c': {'num': 151, 'prob': 0.023757079924480805}, 's': {'num': 331, 'prob': 0.05207677784770296}, 'o': {'num': 427, 'prob': 0.0671806167400881}, 'n': {'num': 310, 'prob': 0.048772813089993705}, 'f': {'num': 100, 'prob': 0.015733165512901194}, 'd': {'num': 205, 'prob': 0.03225298930144745}, 'a': {'num': 455, 'prob': 0.07158590308370044}, 'g': {'num': 91, 'prob': 0.014317180616740088}, 'w': {'num': 132, 'prob': 0.02076777847702958}, 'm': {'num': 135, 'prob': 0.021239773442416614}, 'y': {'num': 131, 'prob': 0.020610446821900566}, 'k': {'num': 21, 'prob': 0.003303964757709251}, 'v': {'num': 36, 'prob': 0.005663939584644431}, 'q': {'num': 8, 'prob': 0.0012586532410320957}, 'j': {'num': 2, 'prob': 0.00031466331025802394}, 'x': {'num': 2, 'prob': 0.00031466331025802394}, 'z': {'num': 0, 'prob': 0.0}}\n"
      ]
     }
    ],
-   "source": [
-    "print(uniq_num_y)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
